syntax = "proto3";

option java_multiple_files = false;
option java_package = "io.masterkun.axor.cluster.proto";
option java_outer_classname = "MembershipProto";

package axor.cluster;

import "axor/axor.proto";

message Subscriber {
  oneof addr {
    string name = 1;
    axor.ActorAddress address = 2;
  }
}

message TopicDesc {
  MsgType msgType = 1;
  repeated Subscriber subscriber = 2;
}

message SubscribedTopics {
  map<string, TopicDesc> topic = 1;
}
